# glyph

./: COPYING  LICENSE  README.md  glyph.cabal  longhand.cabal
glyphs/: a.txt  b.txt  c.txt  comma.txt  d.txt  e.txt  exclamation_mark.txt  f.txt  hyphen.txt  k.txt  l.txt  n.txt  p.txt  r.txt  s.txt  semicolon.txt  t.txt  upper_b.txt  upper_c.txt  upper_g.txt  upper_i.txt  upper_k.txt  upper_l.txt  upper_m.txt  upper_n.txt  upper_o.txt  upper_p.txt  upper_q.txt  upper_y.txt  upper_z.txt  v.txt  w.txt  y.txt  z.txt
letters/: colon.txt  g.txt  h.txt  i.txt  j.txt  m.txt  o.txt  period.txt  q.txt  question_mark.txt  u.txt  upper_a.txt  upper_comma.txt  upper_d.txt  upper_e.txt  upper_f.txt  upper_h.txt  upper_j.txt  upper_r.txt  upper_s.txt  upper_t.txt  upper_u.txt  upper_v.txt  upper_w.txt  upper_x.txt  x.txt
src/Data/CharMap/: Strict.hs
src/Glyph/: Align.hs  Arrange.hs  BuiltIn.hs  Connect.hs  Geometry.hs  Paths.hs  Perturb.hs  Render.hs  Serialize.hs  TH.hs  Types.hs
src/Glyph/Types/: Internal.hs
src/Longhand/: Arrange.hs  BuiltIn.hs  Chunks.hs  Connect.hs  Geometry.hs  Glyph.hs  Glyphs.hs  Layout.hs  Letters.hs  Parse.hs  Paths.hs  Perturb.hs  Render.hs  TH.hs  Types.hs
src/Longhand/Glyphs/: BuiltIn.hs
src/Longhand/Glyphs/BuiltIn/: Paths.hs
src/Longhand/Parse/: TH.hs
test/: Test.hs
