name:                  glyph
version:               0.1.0.0
synopsis:              Haskell implementation of handwriting synthesis
description:           TODO
homepage:              https://github.com/spinda/glyph#readme
bug-reports:           https://github.com/spinda/glyph/issues
license:               BSD3
license-file:          LICENSE
author:                Michael Smith
maintainer:            Michael Smith <michael@spinda.net>
copyright:             2016 Michael Smith
category:              Graphics
build-type:            Simple
cabal-version:         >=1.10
--data-files:            glyphs/*.txt

library
  hs-source-dirs:      src
  exposed-modules:     Data.CharMap.Strict
                     , Glyph.Align
                  -- , Glyph.BuiltIn
                     , Glyph.Connect
                     , Glyph.Geometry
                     , Glyph.Paths
                     , Glyph.Perturb
                     , Glyph.Render
                     , Glyph.Serialize
                  -- , Glyph.TH
                     , Glyph.Types
  other-modules:       Paths_glyph
                     , Glyph.Types.Internal
  build-depends:       base >= 4.4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , cereal >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.6
                     , deepseq >= 1.2 && < 1.5
                     , diagrams-core >= 1.3 && < 1.4
                     , diagrams-lib >= 1.3 && < 1.4
                     , diagrams-svg >= 1.3 && < 1.5
                     , filepath >= 1.4 && < 1.5
                     , ghc-prim >= 0.4 && < 0.5
                     , random >= 1.1 && < 1.2
                     , safecopy >= 0.9 && < 0.10
                     , template-haskell >= 2.10 && < 2.11
  default-language:    Haskell2010

test-suite glyph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , glyph
                     , tasty >= 0.11 && < 0.12
                     , tasty-hunit >= 0.9 && < 0.10
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/spinda/glyph

