name:                  longhand
version:               0.1.0.0
synopsis:              Haskell implementation of handwriting synthesis, based
                       on the algorithm developed in Muse-CGH
description:           TODO
homepage:              https://github.com/spinda/longhand#readme
bug-reports:           https://github.com/spinda/longhand/issues
license:               BSD3
license-file:          LICENSE
author:                Michael Smith
maintainer:            Michael Smith <michael@spinda.net>
copyright:             2016 Michael Smith
category:              Graphics
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Longhand.Parse
                     , Longhand.Types
  build-depends:       base >= 4.4 && < 5
                     , attoparsec >= 0.13 && < 0.14
                     , bytestring >= 0.10 && < 0.11
  default-language:    Haskell2010

executable longhand
  hs-source-dirs:      app
  main-is:             Longhand.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.4 && < 5
                     , longhand
  default-language:    Haskell2010

test-suite longhand-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , longhand
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/spinda/longhand

